<resources>
    <string name="app_name">FitFinder</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="search" />
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="use_existing_login">Use Existing Login</string>
    <string name="new_user">New User?</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="welcome_to_fitfinder">Welcome to FitFinder!</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="logo">Logo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="take_photo">Take Photo</string>
    <string name="add_image">Add Image</string>
    <string name="msg_token_fmt" />
</resources>