<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center"
      android:padding="15dp">

    <!-- Other views for registration form -->

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo2"
        android:contentDescription="@string/logo"/>

    <!-- Username EditText -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/username"
          android:hint="@string/username"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email EditText -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/email"
          android:hint="@string/email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          android:autofillHints="email"
          android:importantForAutofill="yes" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password EditText -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/password"
          android:inputType="textPassword"
          android:hint="@string/password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:autofillHints="password"
          android:importantForAutofill="yes" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm Password EditText -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/confirm_password"
          android:inputType="textPassword"
          android:hint="@string/confirm_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:autofillHints="password"
          android:importantForAutofill="yes" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Show Password Toggle Button -->
    <ToggleButton
        android:id="@+id/show_password_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Password"
        android:layout_below="@id/confirm_password"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Password"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Register Button -->
    <Button
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background"/>

    <!-- Existing Account Text -->
    <TextView
        android:id="@+id/textViewExistingAccount"
        android:text="@string/already_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/btn_loginNow"
        android:text="@string/use_existing_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_background"/>

  </LinearLayout>
</ScrollView>
